--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack serve --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -16,11 +18,12 @@
   "bugs": {
     "url": "https://github.com/OB1-WAN-KENOBI/MigrationCompare/issues"
   },
-  "homepage": "https://github.com/OB1-WAN-KENOBI/MigrationCompare#readme",
+  "homepage": "https://OB1-WAN-KENOBI.github.io/MigrationCompare",
   "description": "",
   "devDependencies": {
     "copy-webpack-plugin": "^13.0.0",
     "css-loader": "^7.1.2",
+    "gh-pages": "^6.3.0",
     "html-webpack-plugin": "^5.6.3",
     "style-loader": "^4.0.0",
     "webpack": "^5.99.9",
