--- a/package.json
+++ b/package.json
@@ -20,24 +20,28 @@
   },
   "homepage": "https://obi-wan.github.io/MigrationCompare",
   "dependencies": {
+    "@dr.pogodin/react-helmet": "^3.0.4",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^6.5.0",
     "@mui/material": "^6.5.0",
     "@mui/x-data-grid": "^7.29.12",
+    "@react-pdf/renderer": "^4.3.1",
     "@tanstack/react-query": "^5.90.11",
     "axios": "^1.13.2",
     "i18next": "^25.7.1",
     "i18next-browser-languagedetector": "^8.2.0",
+    "notistack": "^3.0.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-i18next": "^16.3.5",
     "react-router": "^7.9.6",
-    "recharts": "^3.5.1"
+    "react-window": "^2.2.3",
+    "recharts": "^3.5.1",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "gh-pages": "^6.3.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^24.10.1",
@@ -50,6 +54,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "jsdom": "^27.2.0",
     "prettier": "^3.7.3",
